# ngi

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FEATURE_REQUESTS.md  README.md  TODO.md  cobertura.xml  deny.toml  tarpaulin.toml
.agent/: copilot-instructions.md
.agent/workflows/: implementor.md  operator.md  planner.md  tester.md
.cargo/: audit.toml  config.toml
.claude/hooks/: detect-secrets.sh  rust-quality-gate.sh
.github/: copilot-instructions.md
.github/agents/: implementor.agent.md  operator.agent.md  planner.agent.md  tester.agent.md
.github/dependencies/: INDEX.md  README.md
.github/dependencies/_concepts/: README.md  error-handling.md  security.md  serialization.md
.github/dependencies/anyhow/: README.md
.github/dependencies/axum/: README.md  framework.md
.github/dependencies/bincode/: README.md
.github/dependencies/nanos/: README.md
.github/dependencies/openraft/: README.md  consensus.md
.github/dependencies/ops/: README.md
.github/dependencies/pqc_kyber/: README.md
.github/dependencies/rustls/: README.md
.github/dependencies/serde/: README.md
.github/dependencies/sled/: README.md  architecture.md
.github/dependencies/thiserror/: README.md
.github/dependencies/tokio/: README.md  core-concepts.md
.github/dependencies/tonic/: README.md  framework.md
.github/workflows/: rust.yml
admin/: Cargo.toml  README.md  build.rs
admin/proto/: admin.proto
admin/src/: main.rs  server.rs  tests.rs
auth/: Cargo.toml  build.rs
auth/proto/: auth.proto
auth/src/: main.rs  server.rs  tests.rs
chaos/: Cargo.toml  build.rs
chaos/proto/: chaos.proto
chaos/src/: chaos_service.rs  main.rs  tests.rs
custodian/: Cargo.toml  build.rs
custodian/proto/: custodian.proto
custodian/src/: admin_client.rs  db_client.rs  lib.rs  main.rs  metrics.rs  network.rs  raft.rs  raft_service.rs  server.rs  storage.rs  tests.rs
custodian/tests/: admin_integration.rs  snapshot_e2e.rs
db/: Cargo.toml  README.md  build.rs
db/proto/: db.proto
db/src/: lib.rs  main.rs  network.rs  raft.rs  raft_service.rs  server.rs  storage.rs  tests.rs
db/tests/: consensus_test.rs  integration_test.rs  multi_node_test.rs  performance_test.rs
honeypot/: Cargo.toml
honeypot/src/: main.rs  reporter.rs  traps.rs
lbrp/: Cargo.toml  build.rs
lbrp/src/: clients.rs  main.rs  middleware.rs  routes.rs  tests.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
scripts/: demo.sh
shared/: Cargo.toml
shared/src/: encryption.rs  error.rs  key_store.rs  lib.rs  ticket.rs  user.rs
tarpaulin-output/: cobertura.xml
tests/: Cargo.toml  build.rs
tests/src/: e2e.rs  lib.rs
web/: Cargo.toml  index.html  style.css
web/src/: api.rs  main.rs
web/src/components/: login.rs  mod.rs  ticket_list.rs
