[workspace]

members = [
    "admin",
    "auth",
    "chaos",
    "custodian",
    "db",
    "honeypot",
    "lbrp",
    "tests",
]
resolver = "3"

[workspace.package]
version = "0.1.0-mvp.1"
authors = ["Jonathan A. McCormick, Jr. <mccormick9[at]pm[dot]me>"]
edition = "2024"
license = "Proprietary"
repository = "https://github.com/JonathanMcCormickJr/ngi"
