[package]
name = "admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
tonic-build = "0.14"
protoc-bin-vendored = "3.2.0"

[dependencies]
anyhow = "1.0"
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.48", features = ["full"] }
prometheus = "0.14"
once_cell = "1.21"
hyper = { version = "1.8", features = ["full"] }

# Shared types
shared = { path = "../shared" }

# Crypto & Auth
argon2 = "0.5"
rand = "0.9.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
