[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio = { version = "1.48", features = ["full"] }

# gRPC framework
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# Shared types
shared = { path = "../shared" }

# Crypto & Auth
argon2 = "0.5"
jsonwebtoken = { version = "10.2", features = ["use_pem", "rust_crypto"] }
rand = "0.9.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14"
