[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio = { version = "1.48", features = ["full"] }

# gRPC framework
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# Shared types
shared = { path = "../shared" }

# Proto definitions
proto = { path = "../proto" }

# Crypto & Auth
argon2 = "0.5"
jsonwebtoken = { version = "10.2", default-features = false, features = ["aws_lc_rs"] }
rand = "0.10.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"
