[package]
name = "custodian"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime
tokio = { version = "1.48", features = ["full"] }

# gRPC framework
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# Raft consensus
openraft = { version = "0.9", features = ["serde"] }

# Storage backend
sled = "0.34"

# Serialization
bincode = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Shared types
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.14"
once_cell = "1.17"

# Async trait helper
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.tarp_line]
# Ensure proto generation includes admin proto when building

