[package]
name = "lbrp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Web framework
axum = "0.8"

# Core async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }

# gRPC framework
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# HTTP utilities
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared types
shared = { path = "../shared" }

# Proto definitions
proto = { path = "../proto" }

# Auth
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"

