[package]
name = "proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14"
