[package]
name = "shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Post-quantum cryptography
pqc_kyber = { version = "0.7.1", features = ["kyber768", "std"] }

# Symmetric encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Random number generation
rand = "0.9"

# Base64 encoding for key exchange
base64 = "0.22"

