[package]
name = "shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Post-quantum cryptography
safe_pqc_kyber = { version = "0.6.3", features = ["kyber768", "std"] }

# Key derivation
argon2 = "0.5"

# Symmetric encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Random number generation
rand = "0.10.0"

# Serialization (used by key_store for keypair persistence)
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23"
