[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proto = { path = "../proto" }
uuid = { version = "1.10", features = ["v4"] }
tempfile = "3.10"

