[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
wasm-bindgen = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] } # Match existing project version
gloo-timers = { version = "0.3.0", features = ["futures"] }
